--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>
-  </body>
 
-  <script>
-    // You can also require other files to run in this process
-    require('./dist/renderer.js')
-  </script>
+<head>
+    <meta charset="utf-8">
+    <title>VisualMusic</title>
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <div id="main-bg"></div>
+    <div id="background"></div>
+    <canvas id="visual-canvas"></canvas>
+    <div id="threed-webgl-renderer" class="hidden"></div>
+    <audio id="music" class="hidden" controls></audio>
+    <input id="input-file" type="file" class="hidden" accept="audio/mp3" multiple>
+    <h1 id="title">Please drag your music files here</h1>
+    <div id="file-list-wrapper">
+        <div class="header">Play List</div>
+        <ul id="file-list"></ul>
+    </div>
+    <div id="effect-list-wrapper">
+        <div class="header">Effect List</div>
+        <ul id="effect-list"></ul>
+    </div>
+    <div id="help" class="hidden">
+        <img data-src="img/help.png">
+    </div>
+    <div id="help-wrapper">
+        <div id="help-btn">Help</div>
+    </div>
+    <div id="play-mode"></div>
+    <div id="fullscreen"></div>
+    <div id="song-name"></div>
+    <script src="lib/three.min.js"></script>
+    <script src="lib/jquery.min.js"></script>
+    <script src="lib/require.min.js" data-main="js/main"></script>
+</body>
+
 </html>
