--- a/index.html
+++ b/index.html
@@ -10,29 +10,42 @@
 
 <body>
     <div id="main-bg"></div>
+
     <div id="background"></div>
+
     <canvas id="visual-canvas"></canvas>
+
     <div id="threed-webgl-renderer" class="hidden"></div>
+
     <audio id="music" class="hidden" controls></audio>
+
     <input id="input-file" type="file" class="hidden" accept="audio/mp3" multiple>
+
     <h1 id="title">Please drag your music files here</h1>
+
     <div id="file-list-wrapper">
         <div class="header">Play List</div>
         <ul id="file-list"></ul>
+        <ul id="add-file">Add File</ul>
     </div>
+
     <div id="effect-list-wrapper">
         <div class="header">Effect List</div>
         <ul id="effect-list"></ul>
     </div>
+
     <div id="help" class="hidden">
         <img data-src="img/help.png">
     </div>
+
     <div id="help-wrapper">
         <div id="help-btn">Help</div>
     </div>
+
     <div id="play-mode"></div>
     <div id="fullscreen"></div>
     <div id="song-name"></div>
+
     <script src="lib/jquery.min.js"></script>
     <script src="lib/require.min.js" data-main="js/main"></script>
 
