--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="header">Play List</div>
         <ul id="file-list"></ul>
         <ul id="add-file">Add File</ul>
+        <ul id="close">Close APP</ul>
     </div>
 
     <div id="effect-list-wrapper">
