--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
     <script src="lib/jquery.min.js"></script>
     <script src="lib/require.min.js" data-main="js/main"></script>
 
-    
+    <script>
+        require('./renderer.js')
+    </script>
+
+
+
 </body>
 
 </html>
