--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="header">Play List</div>
         <ul id="file-list"></ul>
         <ul id="add-file">Add File</ul>
-        <ul id="close-btn" onclick="close();">Close APP</ul>
+        <ul id="close-btn" onclick="self.closeWindow()">Close APP</ul>
     </div>
 
     <div id="effect-list-wrapper">
@@ -50,7 +50,8 @@
     <script src="lib/require.min.js" data-main="js/main"></script>
 
     <script>
-        function close(){
+        function closeWindow() {
+            window.opener = null;
             window.close();
         }
     </script>
